--- a/history.html
+++ b/history.html
@@ -11,6 +11,25 @@
         font-size: 11pt;
       }
 
+      #sidebarhandle {
+        cursor: pointer;
+        font-family: sans;
+        font-size: 18pt;
+        position: absolute;
+        right: -1.4em;
+        top: 2em;
+        z-index: 10;
+        background: rgba(255, 255, 255, 0.6);
+        width: 1.5em;
+        padding: 0.25em 0;
+        text-align: center;
+        border-radius: 0 0.5em 0.5em 0;
+      }
+
+      #sidebarhandle:hover {
+        background: rgba(255, 255, 255, 1);
+      }
+
       .hostname {
       }
 
@@ -26,8 +45,21 @@
         flex-grow: 1;
       }
 
-      #lists {
+      #sidebar {
         max-width: 50em;
+        box-sizing: border-box;
+        position: relative;
+      }
+
+      #sidebar.hidden {
+        width: 0px;
+      }
+
+      #sidebar.hidden #lists {
+        display: none;
+      }
+
+      #lists {
         overflow: auto;
         padding: 0 1em 1em;
         box-sizing: border-box;
@@ -51,7 +83,7 @@
       }
 
       @media screen and (max-width: 80em) {
-        #lists {
+        #sidebar {
           max-width: 50vw;
           font-size: 0.8em;
         }
@@ -62,13 +94,29 @@
           flex-direction: column;
         }
 
+        #lists {
+          overflow: visible;
+        }
+
+        #sidebarhandle {
+          display: none;
+        }
+
         #map {
           height: 60vh;
         }
 
-        #lists {
+        #sidebar {
           max-width: none;
           height: auto;
+        }
+
+        #sidebar.hidden {
+          width: auto;
+        }
+
+        #sidebar.hidden #lists {
+          display: block;
         }
       }
     </style>
@@ -83,23 +131,28 @@
     <div id="container">
       <div id="map">
       </div>
-      <div id="lists">
-        <p>
-          Zeigt Knoten an, die in den letzten 14 Tagen dazu gekommen oder verschwunden sind.
-          Funktioniert nur in wirklich modernen Browsern.
-        </p>
+      <div id="sidebar">
+        <div id="sidebarhandle">
+         ✕
+        </div>
+        <div id="lists">
+          <p>
+            Zeigt Knoten an, die in den letzten 14 Tagen dazu gekommen oder verschwunden sind.
+            Funktioniert nur in wirklich modernen Browsern.
+          </p>
 
-        <h2>Neue Knoten</h2>
-        <table>
-          <tbody id="newnodes">
-          </tbody>
-        </table>
+          <h2>Neue Knoten</h2>
+          <table>
+            <tbody id="newnodes">
+            </tbody>
+          </table>
 
-        <h2>Verschwundene Knoten</h2>
-        <table>
-          <tbody id="lostnodes">
-          </tbody>
-        </table>
+          <h2>Verschwundene Knoten</h2>
+          <table>
+            <tbody id="lostnodes">
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
