history: show longest links

--- a/history.html
+++ b/history.html
@@ -179,6 +179,12 @@
             <tbody id="lostnodes">
             </tbody>
           </table>
+
+          <h2>Längste Verbindungen</h2>
+          <table>
+            <tbody id="longlinks">
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
