history: longlings 90th percentile, show tq

--- a/history.html
+++ b/history.html
@@ -96,7 +96,7 @@
         width: 100%;
       }
 
-      #lists td:nth-child(2) {
+      #lists td:not(:first-child) {
         text-align: right;
       }
 
