--- a/history.html
+++ b/history.html
@@ -88,6 +88,10 @@
         box-sizing: border-box;
       }
 
+      #lists .icon {
+        padding: 0 0.25em;
+      }
+
       #lists, #map {
         height: 100vh;
       }
