history: links from lists to map

--- a/history.html
+++ b/history.html
@@ -58,11 +58,11 @@
       }
 
       .hostname.online {
-        color: #558020;
+        color: #558020 !important;
       }
 
       .hostname.offline {
-        color: #D43E2A;
+        color: #D43E2A !important;
       }
 
       #map {
@@ -102,6 +102,10 @@
 
       #lists td:not(:first-child) {
         text-align: right;
+      }
+
+      #lists a {
+        color: #1566A9;
       }
 
       #container {
