history: add simple mesh statistics

--- a/history.html
+++ b/history.html
@@ -176,6 +176,10 @@
             Funktioniert nur in wirklich modernen Browsern.
           </p>
 
+          <h2>Meshdaten</h2>
+          <p id="meshstats">
+          </p>
+
           <h2>Neue Knoten</h2>
           <table>
             <tbody id="newnodes">
