--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
         font-family: sans;
         font-size: 20pt;
         position: absolute;
-        right: 1.0em;
+        right: -2.5em;
         top: 0.7em;
         z-index: 10;
         background: rgba(255, 255, 255, 0.7);
@@ -30,7 +30,6 @@
       }
 
       #sidebar.hidden #sidebarhandle {
-        right: -2.5em;
       }
 
       #sidebarhandle span {
@@ -41,12 +40,12 @@
       }
 
       #sidebarhandle span:after {
-        content: "\f12a";
+        padding-right: 0.125em;
+        content: "\f124";
       }
 
-      #sidebar.hidden #sidebarhandle span:after {
-        padding-left: 0.125em;
-        content: "\f125";
+      #sidebar.hidden #sidebarhandle span {
+        transform: rotate(-180deg);
       }
 
       #sidebarhandle:hover {
