--- a/history.html
+++ b/history.html
@@ -23,6 +23,7 @@
       }
 
       button {
+        -webkit-tap-highlight-color: transparent;
         font-family: "ionicons";
         box-shadow: 0px 0.5px 3px rgba(0, 0, 0, 0.16), 0px 0.5px 2px rgba(0, 0, 0, 0.24);
         border-radius: 0.9em;
