--- a/history.html
+++ b/history.html
@@ -28,20 +28,20 @@
         text-align: left !important;
       }
 
-      #nodeinfo .clients {
+      #infobox .clients {
         font-family: "ionicons";
         color: #1566A9;
         word-spacing: -0.2em;
       }
 
-      #nodeinfo {
+      #infobox {
         position: relative;
         box-shadow: 0px 0.5px 3px rgba(0, 0, 0, 0.16), 0px 0.5px 2px rgba(0, 0, 0, 0.24);
         background: rgba(0, 0, 0, 0.02);
         padding: 0.25em 0;
       }
 
-      #nodeinfo.hidden {
+      #infobox.hidden {
         display: none;
       }
 
@@ -235,7 +235,7 @@
         </button>
 
         <div id="sidebardata">
-          <div id="nodeinfo" class="hidden">
+          <div id="infobox" class="hidden">
           </div>
 
           <p>
