--- a/history.html
+++ b/history.html
@@ -259,9 +259,9 @@
             </tbody>
           </table>
 
-          <h2>Längste Verbindungen</h2>
+          <h2>Verbindungen</h2>
           <table>
-            <tbody id="longlinks">
+            <tbody id="links">
             </tbody>
           </table>
         </div>
