make linklist sortable

--- a/history.html
+++ b/history.html
@@ -294,9 +294,7 @@
           </table>
 
           <h2>Verbindungen</h2>
-          <table>
-            <tbody id="links">
-            </tbody>
+          <table id="links">
           </table>
         </div>
       </div>
