--- a/history.html
+++ b/history.html
@@ -281,6 +281,9 @@
           <p id="meshstats">
           </p>
 
+          <p id="timestamp">
+          </p>
+
           <h2>Neue Knoten</h2>
           <table>
             <tbody id="newnodes">
