tidy css a little

--- a/history.html
+++ b/history.html
@@ -165,27 +165,27 @@
         box-sizing: border-box;
       }
 
-      #sidebardata .icon {
-        padding: 0 0.25em;
-      }
-
       #sidebardata, #map {
         height: 100vh;
       }
 
-      #sidebardata table {
+      #sidebar .icon {
+        padding: 0 0.25em;
+      }
+
+      #sidebar table {
         width: 100%;
       }
 
-      #sidebardata table th {
+      #sidebar table th {
         text-align: left;
       }
 
-      #sidebardata td:not(:first-child), #sidebardata th:not(:first-child) {
+      #sidebar td:not(:first-child), #sidebar th:not(:first-child) {
         text-align: right;
       }
 
-      #sidebardata a {
+      #sidebar a {
         color: #1566A9;
       }
 
