--- a/history.html
+++ b/history.html
@@ -56,21 +56,17 @@
         text-align: left !important;
       }
 
-      #infobox .clients {
+      .infobox .clients {
         font-family: "ionicons";
         color: #1566A9;
         word-spacing: -0.2em;
       }
 
-      #infobox {
+      .infobox {
         position: relative;
         box-shadow: 0px 0.5px 3px rgba(0, 0, 0, 0.16), 0px 0.5px 2px rgba(0, 0, 0, 0.24);
         background: rgba(0, 0, 0, 0.02);
         padding: 0.25em 0;
-      }
-
-      #infobox.hidden {
-        display: none;
       }
 
       button {
@@ -301,8 +297,6 @@
       </button>
 
       <div id="sidebardata">
-        <div id="infobox" class="hidden">
-        </div>
       </div>
     </div>
   </body>
