create map in javascript

--- a/history.html
+++ b/history.html
@@ -161,7 +161,7 @@
         box-sizing: border-box;
       }
 
-      #sidebardata, #map {
+      #sidebardata, .map {
         height: 100vh;
       }
 
@@ -258,7 +258,7 @@
           display: none;
         }
 
-        #map {
+        .map {
           height: 60vh;
         }
 
@@ -290,8 +290,6 @@
     <script src="history.js"></script>
   </head>
   <body>
-    <div id="map">
-    </div>
     <div id="sidebar">
       <button id="sidebarhandle">
       </button>
