move some functions to helper.js

--- a/history.html
+++ b/history.html
@@ -287,6 +287,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/3.0.2/tablesort.min.js"></script>
     <script src="vendor/tablesort.numeric.js"></script>
+    <script src="helper.js"></script>
     <script src="history.js"></script>
   </head>
   <body>
