--- a/history.html
+++ b/history.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Neue und verschwundene Knoten</title>
     <style type="text/css">
+      .stroke-first {
+        paint-order: stroke;
+      }
+
       body {
         margin: 0;
         padding: 0;
@@ -246,11 +250,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,400">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+    <link rel="stylesheet" href="vendor/leaflet.label.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.27.1/es6-shim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.6.3/chroma.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/3.0.2/tablesort.min.js"></script>
+    <script src="vendor/leaflet.label.js"></script>
     <script src="vendor/tablesort.numeric.js"></script>
     <script src="helper.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js" data-main="lib/history"></script>
