--- a/history.html
+++ b/history.html
@@ -278,7 +278,7 @@
     <script src="vendor/leaflet.label.js"></script>
     <script src="vendor/tablesort.numeric.js"></script>
     <script src="helper.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js" data-main="lib/history"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js" data-main="lib/main"></script>
   </head>
   <body>
   </body>
