--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
       }
 
       .bar {
-        display: inline-block;
-        width: 100%;
+        display: block;
         height: 1.4em;
         background: rgba(85, 128, 32, 0.5);
         position: relative;
