fix layout on narrow screens

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         .sidebar .container {
           overflow: visible;
           height: auto;
+          padding-top: 1em;
         }
 
         .sidebarhandle {
