--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/3.0.2/tablesort.min.js"></script>
     <script src="vendor/leaflet.label.js"></script>
     <script src="vendor/tablesort.numeric.js"></script>
+    <script src="vendor/Intl.min.js"></script>
     <script src="helper.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js" data-main="lib/main"></script>
   </head>
