manage dependencies using bower

--- a/index.html
+++ b/index.html
@@ -296,20 +296,20 @@
         }
       }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,400">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-    <link rel="stylesheet" href="vendor/leaflet.label.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.27.1/es6-shim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.6.3/chroma.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tablesort/3.0.2/tablesort.min.js"></script>
-    <script src="vendor/leaflet.label.js"></script>
-    <script src="vendor/tablesort.numeric.js"></script>
-    <script src="vendor/Intl.min.js"></script>
+    <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
+    <link rel="stylesheet" href="bower_components/Leaflet.label/dist/leaflet.label.css">
+    <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
+    <script src="bower_components/es6-shim/es6-shim.js"></script>
+    <script src="bower_components/chroma-js/chroma.js"></script>
+    <script src="bower_components/moment/min/moment-with-locales.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
+    <script src="bower_components/tablesort/src/tablesort.js"></script>
+    <script src="bower_components/Leaflet.label/dist/leaflet.label-src.js"></script>
+    <script src="bower_components/tablesort/src/sorts/tablesort.numeric.js"></script>
+    <script src="bower_components/intl/Intl.complete.js"></script>
     <script src="helper.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js" data-main="lib/main"></script>
+    <script src="bower_components/requirejs/require.js" data-main="lib/main"></script>
   </head>
   <body>
   </body>
