install font using bower

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         }
       }
     </style>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:700,400">
+    <link rel="stylesheet" href="bower_components/roboto-slab-fontface/roboto-slab-fontface.css">
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="bower_components/Leaflet.label/dist/leaflet.label.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
