use minified js where possible

--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
     <link rel="stylesheet" href="bower_components/roboto-slab-fontface/roboto-slab-fontface.css">
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="bower_components/Leaflet.label/dist/leaflet.label.css">
-    <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
-    <script src="bower_components/es6-shim/es6-shim.js"></script>
-    <script src="bower_components/chroma-js/chroma.js"></script>
-    <script src="bower_components/moment/min/moment-with-locales.js"></script>
-    <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
-    <script src="bower_components/tablesort/src/tablesort.js"></script>
-    <script src="bower_components/Leaflet.label/dist/leaflet.label-src.js"></script>
+    <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
+    <script src="bower_components/es6-shim/es6-shim.min.js"></script>
+    <script src="bower_components/chroma-js/chroma.min.js"></script>
+    <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet.js"></script>
+    <script src="bower_components/Leaflet.label/dist/leaflet.label.js"></script>
+    <script src="bower_components/tablesort/tablesort.min.js"></script>
     <script src="bower_components/tablesort/src/sorts/tablesort.numeric.js"></script>
     <script src="bower_components/intl/Intl.complete.js"></script>
     <script src="helper.js"></script>
