handle most dependencies using requirejs

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="bower_components/es6-shim/es6-shim.min.js"></script>
-    <script src="bower_components/chroma-js/chroma.min.js"></script>
-    <script src="bower_components/moment/min/moment-with-locales.min.js"></script>
-    <script src="bower_components/leaflet/dist/leaflet.js"></script>
-    <script src="bower_components/Leaflet.label/dist/leaflet.label.js"></script>
-    <script src="bower_components/tablesort/tablesort.min.js"></script>
-    <script src="bower_components/tablesort/src/sorts/tablesort.numeric.js"></script>
     <script src="bower_components/intl/Intl.complete.js"></script>
     <script src="helper.js"></script>
-    <script src="bower_components/requirejs/require.js" data-main="lib/main"></script>
+    <script src="bower_components/requirejs/require.js" data-main="app"></script>
   </head>
   <body>
   </body>
