[TASK] Inline style and icon css and es6-shim

--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link rel="stylesheet" href="hopglass-icons.css">
+  <link rel="stylesheet" href="hopglass-icons.css?__inline=true">
   <link rel="stylesheet" href="roboto-slab-fontface.css">
   <link rel="stylesheet" href="roboto-fontface.css">
-  <link rel="stylesheet" href="style.css">
-  <script src="vendor/es6-shim/es6-shim.min.js"></script>
+  <link rel="stylesheet" href="style.css?__inline=true">
+  <script src="vendor/es6-shim/es6-shim.min.js?__inline=true"></script>
   <script src="app.js"></script>
 </head>
 <body>
