[TASK] Inject config.json inline

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="roboto-slab-fontface.css">
   <link rel="stylesheet" href="css/roboto-fontface.css">
   <link rel="stylesheet" href="style.css?__inline=true">
+  <script>
+    var jsonData = __inline(config.json);
+  </script>
   <script src="vendor/es6-shim/es6-shim.min.js?__inline=true"></script>
   <script src="app.js"></script>
 </head>
