[BUGFIX] Convert & char to &amp;

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,6 @@
   <script src="app.js"></script>
 </head>
 <body>
-<div class="loader">Lade<br /><span class="spinner"></span><br />Karten & Knoten...</div>
+<div class="loader">Lade<br /><span class="spinner"></span><br />Karten &amp; Knoten...</div>
 </body>
 </html>
