[TASK] Replace es6-shim with promise-polyfill

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <script>
     var jsonData = __inline(config.json);
   </script>
-  <script src="vendor/es6-shim/es6-shim.min.js?__inline=true"></script>
+  <script src="vendor/promise-polyfill/promise.js?__inline=true"></script>
   <script src="app.js"></script>
 </head>
 <body>
