[TASK] Remove grunt-inline-data (use grunt-inline for config.json)

--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css?__inline=true">
+  <link rel="stylesheet" href="style.css?__build=true">
   <script>
-    var jsonData = __inline(config.json);
+    var jsonData = <inline src="config.json" />;
   </script>
-  <script src="vendor/promise-polyfill/promise.js?__inline=true"></script>
+  <script src="vendor/promise-polyfill/promise.js?__build=true"></script>
   <script src="app.js"></script>
 </head>
 <body>
