[TASK] Load mode style inline

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css?__build=true">
+  <link rel="stylesheet" href="main.css?__build=true">
+  <style class="css-mode night" media="not">
+    <inline src="night.css" />
+  </style>
   <script>
     var jsonData = <inline src="config.json" />;
   </script>
