[TASK] Add noscript message

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,15 @@
   <script src="app.js"></script>
 </head>
 <body>
-<div class="loader">Lade<br /><span class="spinner"></span><br />Karten &amp; Knoten...</div>
+<div class="loader">
+  <p>
+    Lade<br />
+    <span class="spinner"></span><br />
+    Karten &amp; Knoten...
+  </p>
+  <noscript>
+      <strong>JavaScript required</strong>
+  </noscript>
+</div>
 </body>
 </html>
