--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="main.css?__build=true">
-  <style class="css-mode night" media="not">
-    <inline src="night.css" />
-  </style>
-  <script>
-    var jsonData = <inline src="config.json" />;
-  </script>
-  <script src="vendor/promise-polyfill/promise.js?__build=true"></script>
+  <link rel="stylesheet" href="main.css" inline>
+  <link rel="stylesheet" class="css-mode night" media="not" href="night.css" inline>
+  <!-- inject:config -->
+  <!-- contents of html partials will be injected here -->
+  <!-- endinject -->
+  <script src="vendor/promise.js" inline></script>
   <script src="app.js"></script>
 </head>
 <body>
