[TASK] Add favicon generator (incl. app tiles) and logo

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,8 @@
 <div class="loader">
   <p>
     Lade<br />
-    <span class="spinner"></span><br />
+    <img inline src="logo.svg" class="spinner" />
+    <br />
     Karten &amp; Knoten...
   </p>
   <noscript>
