[TASK] Move polyfills and test properties

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
   <!-- inject:config -->
   <!-- contents of html partials will be injected here -->
   <!-- endinject -->
+  <script src="vendor/polyfill.js" inline></script>
   <script src="vendor/promise.js" inline></script>
   <script src="app.js"></script>
 </head>
