[TASK] Improve accessbility

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <div class="loader">
   <p>
     Lade<br />
-    <img inline src="logo.svg" class="spinner" />
+    <img inline src="logo.svg" class="spinner" alt="Loading ..."/>
     <br />
     Karten &amp; Knoten...
   </p>
