--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/WebPage">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <!--<meta name="image" content="https://regensburg.freifunk.net/meshviewer/apple-touch-icon.png">-->
+
+  <meta itemprop="name" content="Freifunk Meshviewer">
+  <meta name="description" itemprop="description" content="Freifunk Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
+  <!--Uncomment & adjust local urls-->
+  <!--<meta itemprop="image" content="https://regensburg.freifunk.net/meshviewer/android-chrome-512x512.png">-->
+
+  <!--<meta property="business:contact_data:locality" content="Regensburg">-->
+  <!--<meta property="business:contact_data:region" content="Bayern">-->
+  <meta property="business:contact_data:country_name" content="Germany">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@freifunk">
+
+  <meta name="og:title" content="Freifunk Meshviewer">
+  <meta name="og:description" content="Freifunk Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
+  <!--<meta name="og:image" content="https://regensburg.freifunk.net/meshviewer/android-chrome-512x512.png">-->
+  <!--<meta name="og:url" content="https://regensburg.freifunk.net/meshviewer/">-->
+  <meta name="og:site_name" content="Freifunk Meshviewer">
+  <meta name="og:type" content="website">
+
   <link rel="stylesheet" href="main.css" inline>
   <link rel="stylesheet" class="css-mode night" media="not" href="night.css" inline>
   <!-- inject:config -->
