--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
   <!-- contents of html partials will be injected here -->
   <!-- endinject -->
   <script src="vendor/polyfill.js" inline></script>
-  <script src="vendor/promise.js" inline></script>
+  <script src="vendor/promise/polyfill.js" inline></script>
   <script src="app.js"></script>
 </head>
 <body>
