[BUGFIX] fix spelling error on offline page

--- a/html/offline.html
+++ b/html/offline.html
@@ -9,7 +9,7 @@
 <body>
 <div class="loader">
   <p>
-    Your are Offline!<br />
+    You are Offline!<br />
     <img inline src="logo.svg" class="spinner" alt="Loading ..."/>
     <br />
     No connection available.
