--- a/html/offline.html
+++ b/html/offline.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title><!-- inject:title --><!-- endinject --></title>
+  <title>Meshviewer Loading</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="main.css" inline>
 </head>
