--- a/html/index.html
+++ b/html/index.html
@@ -27,23 +27,12 @@
   <link rel="stylesheet" href="main.css" inline>
   <link rel="stylesheet" class="css-mode night" media="not" href="night.css" inline>
   <title>Meshviewer - loading...</title>
-  <script>
   <!-- inject:config -->
   <!-- contents of html partials will be injected here -->
   <!-- endinject -->
-  fetch('config.json')
-  .then(res => res.json())
-  .then((out) => {
-    window.config = Object.assign(defaultConfig, out);
-    console.log("Configuration loaded, loading application.");
-    let script = document.createElement('script');
-    script.src = "app.js";
-    document.head.appendChild(script);
-  })
-  .catch(err => { throw err });
-  </script>
   <script src="vendor/polyfill.js" inline></script>
   <script src="vendor/promise/polyfill.js" inline></script>
+  <script src="app.js" inline></script>
 </head>
 <body>
 <div class="loader">
