--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <!--<meta name="image" content="https://regensburg.freifunk.net/meshviewer/apple-touch-icon.png">-->
 
-  <meta itemprop="name" content="<!-- inject:title --><!-- endinject --> Meshviewer">
-  <meta name="description" itemprop="description" content="<!-- inject:title --><!-- endinject --> Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
+  <meta itemprop="name" content="Meshviewer">
+  <meta name="description" itemprop="description" content="Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
   <!--Uncomment & adjust local urls-->
   <!--<meta itemprop="image" content="https://regensburg.freifunk.net/meshviewer/android-chrome-512x512.png">-->
 
@@ -17,11 +17,9 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@freifunk">
 
-  <meta name="og:title" content="<!-- inject:title --><!-- endinject -->">
-  <meta name="og:description" content="<!-- inject:title --><!-- endinject --> Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
-  <!--<meta name="og:image" content="https://regensburg.freifunk.net/meshviewer/android-chrome-512x512.png">-->
-  <!--<meta name="og:url" content="https://regensburg.freifunk.net/meshviewer/">-->
-  <meta name="og:site_name" content="<!-- inject:title --><!-- endinject -->">
+  <meta name="og:title" content="Meshviewer">
+  <meta name="og:description" content="Meshviewer Knotenkarte - Zeigt alle Knoten, Statistiken und Verbindungen auf Karte oder Topologie">
+    <meta name="og:site_name" content="Meshviewer">
   <meta name="og:type" content="website">
 
   <link rel="stylesheet" href="main.css" inline>
